--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.7.31",
     "swiper": "^10.0.4",
     "typed.js": "^2.0.16",
     "web-vitals": "^2.1.4"
